<resources>
    <string name="app_name">Bible</string>

    <string name="action_settings">Settings</string>

    <string name="defaultbible">kjv</string>
    <string name="startup_message_first_time">Setting thing up for the first time</string>
    <string name="startup_message">loading…</string>

    <string name="main_btnmenu">Show menu</string>
    <string name="main_btnbooks">Select book</string>
    <string name="main_btntranslations">Select bible translation</string>
    <string name="main_btnShowBottomSheet">Show/Hide quick options</string>

    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_translations">Translations</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contribute">Contribute</string>
    <string name="menu_help">Help</string>

    <string name="selectbook_btnGrid">View as grid</string>
    <string name="selectbook_btnList">View as list</string>
    <string name="selectbook_btnSortAlpha">Sort alphabetically</string>
    <string name="selectbook_btnSortNormal">Sort in book order</string>
    <string name="selectbook_btnSort_ascending">Sort ascending</string>
    <string name="selectbook_btnSort_descending">Sort descending</string>

    <string name="btnBack">Back</string>
    <string name="book_search_hint">Search book</string>

    <string name="books">Books</string>
    <string name="chapters">Chapters</string>
    <string name="chapter_more">+ more</string>
    <string name="translations">Bible Translations</string>

    <string name="localTranslations">Local</string>
    <string name="cloudTranslations">Cloud</string>
    <string name="ok">OK</string>
    <string name="translationNeededToStart">You have no bible translation locally. Please select
    at least one to download on next screen</string>
    
    <string name="download">Download Translation</string>
    <string name="notification_downloading">Downloading</string>
    <string name="delete">Delete Translation</string>
    <string name="delete_confirmation_message">Are you sure you want to delete the %s translation?</string>
    <string name="delete_unable_to_delete_active_translation">Sorry, you can not delete your current translation.</string>

    <string name="currentTranslation">Current translation</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>

</resources>
